# pyats-jeyws01

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
jeypyats/: __init__.py
jeypyats/parsers/: __init__.py
jeypyats/parsers/iosxe/: __init__.py  iosxe_interface_parsers_nc.py  iosxe_routing_parsers_nc.py
jeypyats/parsers/parsers.egg-info/: PKG-INFO  SOURCES.txt
jeypyats/parsers/xrd/: __init__.py  xrd_interface_parser_nc.py  xrd_interface_parser_nc_oc.py  xrd_interface_parser_nc_xr.py
jeypyats/test_suite/: __init__.py
jeypyats/test_suite/scripts/: __init__.py  run_all_tests.py
jeypyats/test_suite/tests/: test_iosxe_l2vpn_parser.py  test_iosxe_routing_parser.py  test_xrd_interface_parser_nc.py  test_xrd_interface_parser_nc_oc.py  test_xrd_interface_parser_nc_xr.py  test_xrd_interface_parsers.py
jeypyats/utils/: __init__.py  netconf_connector.py  rpc_msgs.py  utils.py
parsers/iosxe/: __init__.py  iosxe_interface_parsers_nc.py  iosxe_routing_parsers_nc.py
parsers/xrd/: xrd_interface_parser_nc.py  xrd_interface_parser_nc_oc.py  xrd_interface_parser_nc_xr.py
scripts/iosxe/Failover/: failover.py  jobfile.py
scripts/xrd/StepIn/: __init__.py  interface_test.bckp.txt  interface_test.py  job_interface_test.py
scripts/xrd/first_script/: first_script.py
scripts/xrd/generate_topology_from_protocol_v1.0/: generate_topology_from_protocol_v1.0.py
scripts/xrd/generate_topology_from_protocol_v1.1/: README.md  README_Corrections.md  README_v1.0.md  clean_topology.py  main.py
scripts/xrd/generate_topology_v1.0/: __init__.py  generate_topology.py
scripts/xrd/l2vpn/: cli_output.txt  job_l2vpn_cli.py  job_l2vpn_ncc.py  json_show_l2vpn_bd_brief_v1.0.json  l2vpn_bd_basic_output.xml  l2vpn_bd_code_rpc_v1.0.py  l2vpn_bd_code_test_v1.0.py  l2vpn_bgbd_script_cli.v1.0.py  l2vpn_bgbd_script_ncc.v1.0.py  rpc_output.xml  snippet.cfg  xml_output.xml
scripts/xrd/parse_device_facts/: job_parse_device_facts.py  job_parse_device_facts_cli.py  job_parse_device_facts_ncc.py  parse_device_facts.py  parse_device_facts_cli_jeylab.py  (+1 more)
unittest/scripts/: run_all_tests.py
unittest/tests/: __init__.py  test_iosxe_l2vpn_parser.py  test_iosxe_routing_parser.py  test_xrd_interface_parser_nc.py  test_xrd_interface_parser_nc_oc.py  test_xrd_interface_parser_nc_xr.py  test_xrd_interface_parsers.py
(+17 files in other folders)
