[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jeypyats"
version = "1.1.0"
description = "JeyPyats: Automated testing framework for network equipment via NETCONF"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
    {name = "Jeremie Rouzet", email = "jeremie.rouzet@netalps.fr"}
]
maintainers = [
    {name = "Jeremie Rouzet", email = "jeremie.rouzet@netalps.fr"}
]
keywords = ["networking", "netconf", "automation", "testing", "cisco", "ios-xe", "ios-xr", "pyats"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Networking",
]
dependencies = [
    "lxml>=4.9.0",
    "xmltodict>=0.12.0",
    "packaging>=21.0",
    "ncclient>=0.6.0",
    "genie>=23.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pyats>=23.0",
    "unicon>=23.0",
    "paramiko>=2.0.0",
    "requests>=2.25.0",
    "pyyaml>=6.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "coverage>=7.0.0",
    "yamllint>=1.30.0",
]

[project.urls]
Homepage = "https://github.com/jeyriku/pyats-jeyws01"
Documentation = "https://github.com/jeyriku/pyats-jeyws01#readme"
Repository = "https://github.com/jeyriku/pyats-jeyws01"
Issues = "https://github.com/jeyriku/pyats-jeyws01/issues"
Changelog = "https://github.com/jeyriku/pyats-jeyws01/blob/main/README.md"

[project.scripts]
jeypyats-test = "jeypyats.test_suite.scripts.run_all_tests:main"

[tool.setuptools]
packages = ["jeypyats"]
include-package-data = true

[tool.setuptools.package-dir]
"" = "."

[tool.pytest.ini_options]
testpaths = ["test_suite/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
